--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
 	<!-- Flexslider
 	<link rel="stylesheet" href="css/flexslider.css"> -->
+	<script src="/js/jquery.min.js"></script>
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="fonts/webfont/stylesheet.css">
@@ -50,7 +51,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 	
 	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
+	
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" ></script>
 
 	<!-- Modernizr JS -->
