--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
 	<!-- Flexslider
 	<link rel="stylesheet" href="css/flexslider.css"> -->
-	<script src="/js/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="fonts/webfont/stylesheet.css">
